[BE/FE] Fix apikey endpoint, add more info for ui to display (#36)
* fix(apikeys): Fix endpoints, return more info for display for ui

* Update backend/src/moderation/routes/display/routes.py


---------
